# ChainForge

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  README.MD  conanfile.txt  docker-compose.yml
.github/: CI-PIPELINE-FIXES.md  CI-PIPELINE-IMPROVEMENTS.md  DOCKER-COMPOSE-UPDATE.md  README.md  SANITIZER-COMPATIBILITY.md
.github/scripts/: install-dependencies.sh
.github/workflows/: ci.yml
cmake/: ChainForgeConfig.cmake.in  CompilerFlags.cmake  ConanSetup.cmake  FindSecp256k1.cmake  TestCoverage.cmake
config/: config.yaml
deploy/docker/: Dockerfile.explorer  Dockerfile.node  Dockerfile.tools
deploy/grafana/: README.md
deploy/grafana/dashboards/chainforge/: chainforge-overview.json
deploy/grafana/provisioning/dashboards/: dashboards.yml
deploy/grafana/provisioning/datasources/: datasources.yml  prometheus.yml
deploy/helm/explorer/: Chart.yaml  values.yaml
deploy/helm/node/: Chart.yaml  values.yaml
deploy/postgres/init/: 01-init.sql
deploy/prometheus/: README.md  prometheus.yml
documentation/: BUILD.md  BUILD_README.md  C++-RUNTIME-ANALYSIS.md  DOCKER-FIXES.md  ERROR_HANDLING_MIGRATION.md  ERROR_HANDLING_SUMMARY.md  MILESTONE_TEMPLATE.md  NETWORK_TRANSPORT.md  PEER_DISCOVERY.md  PROJECT_OVERVIEW.md  README.md  ROADMAP.md  SERIALIZATION_IMPLEMENTATION.md  TESTING_FRAMEWORK.md  TESTING_FRAMEWORK_SUMMARY.md
modules/: CMakeLists.txt
modules/consensus/: CMakeLists.txt
modules/consensus/include/chainforge/consensus/: consensus.hpp
modules/consensus/src/: consensus_impl.cpp
modules/core/: CMakeLists.txt
modules/core/examples/: error_handling_example.cpp  error_integration_guide.cpp  simple_error_example.cpp
modules/core/include/chainforge/core/: address.hpp  amount.hpp  block.hpp  error.hpp  error_utils.hpp  expected.hpp  hash.hpp  timestamp.hpp  transaction.hpp  types.hpp
modules/core/src/: address.cpp  amount.cpp  block.cpp  error.cpp  hash.cpp  main.cpp  timestamp.cpp  transaction.cpp
modules/crypto/: CMakeLists.txt
modules/crypto/include/chainforge/crypto/: curve.hpp  hash.hpp  keccak.hpp  keypair.hpp  random.hpp  signature.hpp  types.hpp
modules/crypto/src/: curve.cpp  hash.cpp  keccak.cpp  keypair.cpp  random.cpp  signature.cpp
modules/logging/: CMakeLists.txt
modules/logging/examples/: logging_example.cpp
modules/logging/include/chainforge/logging/: config_loader.hpp  json_formatter.hpp  log_manager.hpp  logger.hpp  logging.hpp  performance_logger.hpp
modules/logging/src/: config_loader.cpp  json_formatter.cpp  log_manager.cpp  logger.cpp  performance_logger.cpp
modules/mempool/: CMakeLists.txt
modules/mempool/include/chainforge/mempool/: mempool.hpp
modules/mempool/src/: mempool_impl.cpp  mempool_impl.hpp
modules/metrics/: CMakeLists.txt
modules/metrics/examples/: metrics_example.cpp
modules/metrics/include/chainforge/metrics/: chainforge_metrics.hpp  counter.hpp  gauge.hpp  histogram.hpp  logging_metrics.hpp  metrics.hpp  metrics_registry.hpp  metrics_server.hpp
modules/metrics/include/chainforge/metrics/internal/: simple_metrics.hpp
modules/metrics/src/: chainforge_metrics.cpp  counter.cpp  gauge.cpp  histogram.cpp  logging_metrics.cpp  metrics_registry.cpp  metrics_server.cpp  simple_metrics.cpp
modules/p2p/: CMakeLists.txt
modules/p2p/include/chainforge/p2p/: network.hpp  peer_address.hpp  peer_discovery.hpp  tcp_client.hpp  tcp_connection.hpp  tcp_server.hpp  udp_transport.hpp
modules/p2p/src/: peer_address.cpp  peer_discovery.cpp  tcp_client.cpp  tcp_connection.cpp  tcp_server.cpp  udp_transport.cpp
modules/rpc/: CMakeLists.txt
modules/rpc/include/chainforge/rpc/: rpc_server.hpp
modules/rpc/src/: blockchain_rpc_methods.cpp  blockchain_rpc_methods.hpp  http_server.cpp  http_server.hpp  rpc_server_impl.cpp  rpc_server_impl.hpp
modules/serialization/: CMakeLists.txt
modules/serialization/include/chainforge/serialization/: serialization.hpp  serializer.hpp  validator.hpp
modules/serialization/proto/: block.proto  transaction.proto  types.proto
modules/serialization/src/: serializer.cpp  validator.cpp
modules/storage/: CMakeLists.txt
modules/storage/include/chainforge/storage/: database.hpp
modules/storage/src/: rocksdb_database.cpp
scripts/: build-and-test.ps1  build-and-test.sh  build-docker.ps1  build-docker.sh  build.bat  build.sh  test-docker-build.sh  test-docker-simple.sh  test-packages.sh
tests/: CMakeLists.txt
tests/fuzz/: test_hash_fuzz.cpp  test_transaction_fuzz.cpp
tests/include/: mock_objects.hpp  test_fixtures.hpp  test_helpers.hpp
tests/integration/: test_blockchain_integration.cpp  test_p2p_integration.cpp
tests/unit/: test_framework_demo.cpp  test_network_transport.cpp  test_peer_discovery.cpp  test_serialization.cpp
tests/unit/core/: test_address.cpp  test_amount.cpp  test_block.cpp  test_error_handling.cpp  test_hash.cpp  test_timestamp.cpp  test_transaction.cpp
tests/unit/crypto/: test_hash.cpp  test_keypair.cpp  test_signature.cpp
tests/unit/logging/: test_log_manager.cpp  test_logger.cpp
tests/unit/metrics/: test_metrics.cpp  test_metrics_registry.cpp
tests/unit/serialization/: test_serialization.cpp
